--- a/index.html
+++ b/index.html
@@ -50,16 +50,28 @@
   <div class="container">
     <h1>Acesso Tech Store</h1>
 
-    <a href="https://pay.kiwify.com.br/CaEJRny" class="btn" target="_blank">
-      🎧 BINNUNE – Fone Gamer Sem Fio
+    <a href="https://kiwify.app/1RoQa1F" class="btn" target="_blank">
+      🎧 Fone de Ouvido Lenovo GM2 Pro Gamer
     </a>
 
-    <a href="https://pay.kiwify.com.br/EPvxY1s" class="btn" target="_blank">
-      🎧 Lenovo GMD Pro – Bluetooth 5.3
+    <a href="https://kiwify.app/3fBLs1I" class="btn" target="_blank">
+      🔊 Mini Caixa de Som Bluetooth 5.0 Portátil
+    </a>
+
+    <a href="https://kiwify.app/tVxCVpQ" class="btn" target="_blank">
+      🚲 Suporte Celular de Bicicleta com LED
+    </a>
+
+    <a href="https://kiwify.app/QZYELqG" class="btn" target="_blank">
+      🔦 Lanterna Super LED Recarregável com Zoom
+    </a>
+
+    <a href="https://kiwify.app/NLhpurM" class="btn" target="_blank">
+      🔌 Cabo Magnético Tipo-C com LED
     </a>
 
     <div class="footer">
-      Produtos com envio rápido e garantia de qualidade.
+      Envio rápido e produtos com garantia. Aproveite as ofertas!
     </div>
   </div>
 </body>
