--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
     <h1>Acesso Tech Store</h1>
 
     <a href="https://kiwify.app/1RoQa1F" class="btn" target="_blank">
-      🎧 Fone de Ouvido Lenovo GM2 Pro Gamer
+      🎧 Máquina De Cortar Cabelo Parágrafo Barba Masculina Designer Aleatório Elétrico Profissional
     </a>
 
     <a href="https://kiwify.app/3fBLs1I" class="btn" target="_blank">
-      🔊 Mini Caixa de Som Bluetooth 5.0 Portátil
+      🔊 Soundcore by Anker P20i Verdadeiro Fones De Ouvido Sem Fio 30H
     </a>
 
     <a href="https://kiwify.app/tVxCVpQ" class="btn" target="_blank">
-      🚲 Suporte Celular de Bicicleta com LED
+      🚲 Alexa
     </a>
 
     <a href="https://kiwify.app/QZYELqG" class="btn" target="_blank">
-      🔦 Lanterna Super LED Recarregável com Zoom
+      🔦 Mouse gamer para jogo computador 3200dpi com LED laser X7 USB Botões Profissional
     </a>
 
     <a href="https://kiwify.app/NLhpurM" class="btn" target="_blank">
-      🔌 Cabo Magnético Tipo-C com LED
+      🔌 T9 Lanterna Tática Mais Forte Do Mundo Potente Sitio Fazenda
     </a>
 
     <div class="footer">
