--- a/index.html
+++ b/index.html
@@ -74,18 +74,20 @@
 </head>
 <body>
   <div class="container">
-    <img class="logo" src="https://cdn-icons-png.flaticon.com/512/732/732221.png" alt="Logo Raio" />
+    <!-- LOGO do raio azul -->
+    <img class="logo" src="logo_raio_azul.png" alt="Logo Raio" />
     <h1>Acesso Tech Store</h1>
 
-    <img class="product-image" src="https://raw.githubusercontent.com/henriquefl27/acesso-tech-store/main/produtos.jpg" alt="Produtos em Destaque" />
+    <img class="product-image" src="produtos.jpg" alt="Produtos em Destaque" />
 
-    <a href="https://kiwify.app/1RoQa1F" class="btn">💈 Máquina De Cortar Cabelo Parágrafo Barba Masculina</a>
-    <a href="https://kiwify.app/3fBLs1I" class="btn">🎧 Soundcore by Anker P20i Verdadeiro Fones De Ouvido Sem Fio</a>
-    <a href="https://kiwify.app/tVxCVpQ" class="btn">🔊 Com Neutro,alexa,interruptor inteligente</a>
-    <a href="https://kiwify.app/QZYELqG" class="btn">🖱️ Mouse gamer para jogo computador 3200dpi com LED laser X7 USB Botões Profissional</a>
-    <a href="https://kiwify.app/NLhpurM" class="btn">🔦 T9 Lanterna Tática Mais Forte Do Mundo Potente Sitio Fazenda</a>
+    <a href="https://kiwify.app/1RoQa1F" class="btn">🎧 Fone de Ouvido Lenovo GM2 Pro Gamer</a>
+    <a href="https://kiwify.app/3fBLs1I" class="btn">🔊 Mini Caixa de Som Bluetooth 5.0 Portátil</a>
+    <a href="https://kiwify.app/tVxCVpQ" class="btn">🚲 Suporte Celular de Bicicleta com LED</a>
+    <a href="https://kiwify.app/QZYELqG" class="btn">🔦 Lanterna Super LED Recarregável com Zoom</a>
+    <a href="https://kiwify.app/NLhpurM" class="btn">🔌 Cabo Magnético Tipo-C com LED</a>
 
-    <a href="https://wa.me/5577988830361" class="btn whatsapp">💬 Fale conosco no WhatsApp</a>
+    <!-- Lembre-se de colocar seu número com DDD -->
+    <a href="https://wa.me/55SEUNUMEROAQUI" class="btn whatsapp">💬 Fale conosco no WhatsApp</a>
 
     <div class="footer">
       Envio rápido e produtos com garantia. Aproveite as ofertas!
