--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <a href="https://kiwify.app/NLhpurM" class="btn">🔌 Cabo Magnético Tipo-C com LED</a>
 
     <!-- Lembre-se de colocar seu número com DDD -->
-    <a href="https://wa.me/55SEUNUMEROAQUI" class="btn whatsapp">💬 Fale conosco no WhatsApp</a>
+    <a href="https://wa.me/5577988860631" class="btn whatsapp">💬 Fale conosco no WhatsApp</a>
 
     <div class="footer">
       Envio rápido e produtos com garantia. Aproveite as ofertas!
